@@ -1,3 +1,9 @@
+2000-11-17  Richard Henderson  <rth@redhat.com>
+
+	* ehopt.c (eh_frame_code_alignment): New arg `in_seg', update all
+	callers.  Don't switch segments.  Expect CIE == -1 in .debug_frame.
+	(check_eh_frame): Handle .eh_frame and .debug_frame concurrently.
+
 2000-11-17  Nick Clifton  <nickc@redhat.com>
 
 	* config/tc-arm.c (md_pseudo_table): Add support for .line and
